<resources>
    <string name="app_name">TextApp</string>
    <string name="notebook">Notepad</string>

    <string name="login_no_user">The user does not exist!</string>
    <string name="login_error_password">The password is incorrect. Please log in again</string>
    <string name="login_enter_username_tip">Please enter the user name</string>
    <string name="login_enter_password_tip">Please enter the user password</string>
    <string name="login_enter_password_tip2">Please enter your password again</string>
    <string name="login_password_diff_tip">The two passwords do not match. Please re-enter them</string>
    <string name="register_checkbox_tip">Please check the Agree to Terms of Use box</string>
    <string name="modify_success">Modified successfully</string>
    <string name="modify_failure">Modify failed, please try again!</string>
    <string name="modify_password_enter_new_password">Please enter a new password</string>
    <string name="modify_password_enter_confirm_password">Please confirm the password.</string>
    <string name="logining">Logging in</string>
    <string name="registering">Being registered</string>
    <string name="register_success">Successful registration</string>
    <string name="register_failure">Registration failed, please try again!</string>
    <string name="register_user_exist">The user has registered</string>

    <string name="edit_content_save_tip">The saved record cannot be empty</string>
    <string name="edit_content_modify_tip">The modified record cannot be empty</string>
    <string name="save_success">Save successfully</string>
    <string name="save_failure">Save failed, please try again!</string>
    <string name="delete_success">Delete successfully</string>
    <string name="delete_failure">Delete failed, please try again!</string>
    <string name="please_choose_type">Please select category</string>
    <string name="type_show">classification: %s</string>

    <string name="uploading">Uploading pictures</string>
    <string name="common_submit">Be submitting</string>

    <string name="title">notepad(%s)</string>
    <string name="type_all">all</string>
    <string name="type_person">person</string>
    <string name="type_life">life</string>
    <string name="type_work">work</string>
    <string name="type_finance">finance</string>
    <string name="type_other">other</string>
    <string name="location_add_tip">Click Add Positioning</string>
    <string name="location_search">Searching for a location in the vicinity</string>
    <string name="location_choose">Please select a location</string>


    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="login_new_password">new password</string>
    <string name="login_confirm_password">confirm\npassword</string>
    <string name="register_agreed">I have agreed to the terms of use</string>
    <string name="submit">submit</string>
    <string name="modify_password">Password</string>
    <string name="modify_password2">Modify Password</string>
    <string name="news">news</string>

    <string name="add_record">Add Record</string>
    <string name="edit_record">Edit Record</string>
    <string name="enter_content">enter content</string>
    <string name="record_choose_type">Choose classification</string>

    <string name="permission_tip">The following permissions must be granted :1. Storage permissions. \n2. Location permission</string>

    <string-array name="noteboot_type">
        <item>person</item>
        <item>life</item>
        <item>work</item>
        <item>finance</item>
        <item>other</item>
    </string-array>

    <string-array name="add_photo">
        <item>photograph</item>
        <item>album</item>
    </string-array>
</resources>
