<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/type_all"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#999999" />

        <TextView
            android:id="@+id/tv_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/type_person"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#999999" />

        <TextView
            android:id="@+id/tv_life"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/type_life"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#999999" />

        <TextView
            android:id="@+id/tv_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/type_work"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#999999" />

        <TextView
            android:id="@+id/tv_finance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/type_finance"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#999999" />

        <TextView
            android:id="@+id/tv_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/type_other"
            android:textColor="@android:color/white"
            android:textSize="14sp" />


    </LinearLayout>
</FrameLayout>