<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <!--    <ImageView-->
    <!--        android:id="@+id/login_head"-->
    <!--        android:layout_width="120dp"-->
    <!--        android:layout_height="120dp"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:layout_margin="10dp" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stephile_script"
        android:gravity="center"
        android:text="@string/notebook"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="60sp" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/common_input_bg"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:drawablePadding="10dp"
        android:hint="@string/login_username"
        android:padding="10dp"
        android:textColor="#333333"
        android:textColorHint="#666666"
        android:theme="@style/MyEditText" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/common_input_bg"
        android:drawableLeft="@drawable/baseline_password_24"
        android:drawablePadding="10dp"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#333333"
        android:textColorHint="#666666"
        android:theme="@style/MyEditText" />


    <Button
        android:id="@+id/check_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/btn_login"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/register_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/btn_register"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/register"
        android:textColor="#03a9f4"
        android:textSize="16sp" />


</LinearLayout> 
