<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fefefe"
    tools:context=".notepad.activity.NotepadActivity">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#03A9F4">

        <TextView
            android:id="@+id/note_name"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:drawableEnd="@drawable/baseline_arrow_drop_down_24"
            android:gravity="center"
            android:text="@string/notebook"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_title"
        android:cacheColorHint="#00000000"
        android:divider="#E4E4E4"
        android:dividerHeight="1dp"
        android:fadingEdge="none"
        android:listSelector="#00000000"
        android:scrollbars="none"></ListView>

    <ImageView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:src="@drawable/add" />

    <Button
        android:id="@+id/btn_click"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="#03A9F4"
        android:text="@string/news"
        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/btn_upd_click"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentRight="true"
        android:background="#03A9F4"
        android:paddingEnd="10dp"
        android:text="@string/modify_password"
        android:textColor="@android:color/white" />

</RelativeLayout>